namespace java org.code4everything.demo.springboot.thrift.common

struct ThriftRequest {
    1: string request='hello'
}